updated styling and added a new route

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -45,7 +45,7 @@
                   class="fas fa-user"></i>&nbsp;&nbsp;Users</a>
             <ul class="collapse list-unstyled" id="userSubmenu">
                <li>
-                  <a href="/signup"><i class="fas fa-plus-circle"></i>&nbsp;&nbsp;Add New User</a>
+                  <a href="/adduser"><i class="fas fa-plus-circle"></i>&nbsp;&nbsp;Add New User</a>
                </li>
 
                <li>
