--- a/views/admin/outofstock.ejs
+++ b/views/admin/outofstock.ejs
@@ -12,7 +12,7 @@
                         <th>Name</th>
                         <th>Price</th>
                         <th>Stock</th>
-                        <th>Actions</th>
+                        <th style="width:150px;">Actions</th>
                     </tr>
                 </thead>
                 <tfoot>
@@ -21,7 +21,7 @@
                         <th>Name</th>
                         <th>Price</th>
                         <th>Stock</th>
-                        <th>Actions</th>
+                        <th style="width:150px;">Actions</th>
                     </tr>
                 </tfoot>
                 <tbody>
@@ -29,7 +29,7 @@
                     
 
                     <% products.forEach((pro)=> { %>
-                        <% if(pro.oldstock.includes('In stock')) { %>
+                        <% if(pro.oldstock === 'In stock') { %>
                             <tr style="background-color: red; color: white;">
                                 <td><%= pro.sku %></td>
                                 <td><%= pro.title %></td>
@@ -51,10 +51,10 @@
                             <td><%= pro.newprice %></td>
                             <td><%= pro.newstock %></td>
                             <td>
-                                <a target="black" class="btn btn-primary p-2" href="<%= pro.url %>"><i class="fas fa-eye"></i></a>
+                                <a style="width:50px;" target="black" class="btn btn-primary p-2" href="<%= pro.url %>"><i class="fas fa-eye"></i></a>
                                 <form style="display: inline;" action="/delete/product/<%= pro.id %>?_method=DELETE" method="POST">
                                     <input type="hidden" name="_method" value="DELETE">
-                                    <button style="cursor: pointer;" type="submit" class="btn btn-danger p-2"><i class="fas fa-trash"></i></button>
+                                    <button style="display: inline; width:50px;" type="submit" class="btn btn-danger p-2"><i class="fas fa-trash"></i></button>
                                 </form>
                             </td>
                         </tr>
