--- a/views/admin/pricechanged.ejs
+++ b/views/admin/pricechanged.ejs
@@ -12,7 +12,7 @@
                         <th>Name</th>
                         <th>Old Price</th>
                         <th>New Price</th>
-                        <th>Actions</th>
+                        <th style="width:150px;">Actions</th>
                     </tr>
                 </thead>
                 <tfoot>
@@ -21,7 +21,7 @@
                         <th>Name</th>
                         <th>Old Price</th>
                         <th>New Price</th>
-                        <th>Actions</th>
+                        <th style="width:150px;">Actions</th>
                     </tr>
                 </tfoot>
                 <tbody>
@@ -34,12 +34,12 @@
                         <td><%= pro.oldprice %></td>
                         <td><%= pro.newprice %></td>
                         <td>
-                            <a target="black" class="btn btn-primary p-2" href="<%= pro.url %>"><i
+                            <a style="width:50px;" target="black" class="btn btn-primary p-2" href="<%= pro.url %>"><i
                                     class="fas fa-eye"></i></a>
                             <form style="display: inline;" action="/delete/product/<%= pro.id %>?_method=DELETE"
                                 method="POST">
                                 <input type="hidden" name="_method" value="DELETE">
-                                <button style="cursor: pointer;" type="submit" class="btn btn-danger p-2"><i
+                                <button style="cursor: pointer; width:50px;" type="submit" class="btn btn-danger p-2"><i
                                         class="fas fa-trash"></i></button>
                             </form>
                         </td>
