--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
 
 <body>
     <nav class="py-1 navbar navbar-expand-lg navbar-light bg-danger">
-        <a class="navbar-brand text-white ml-4" href="/dashboard"><b>Authentication Project</b></a>
+        <a class="navbar-brand text-white ml-4" href="/dashboard"><b>Walmart Scrapper App</b></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
