updated styling for index component

--- a/public/stylesheets/design.css
+++ b/public/stylesheets/design.css
@@ -189,3 +189,11 @@ body {
     flex-direction:column;
     width: 80%;
 }
+
+.index {
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    height: 100vh;
+}
