--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') -%>
 
-    <div class="text-center">
+    <div class="index">
         <a id="btnHome" class="btn btn-danger" href="/login">Login to App</a>
     </div>
 
